2005-08-09  Mark Kettenis  <kettenis@gnu.org>

	* sparc64obsd-tdep.c: Tweak comments.
	(sparc64obsd_sigreturn_offset): Add offset for new OpenBSD 3.8
	signal trampoline.

2005-08-09  Andrew Cagney  <cagney@gnu.org>

	* linux-nat.h (linux_proc_xfer_memory): Change type of "myaddr" a
	"gdb_byte" pointer.
	* linux-nat.c (linux_proc_xfer_memory): Update.
	(get_signo): Cast signo to a "gdb_byte" pointer.
	* i386-linux-nat.c (child_resume): Make "buf" a gdb_byte, delete
	redundant casts.
	(child_resume): Cast eflags to a "gdb_byte" pointer.

2005-08-08  Mark Kettenis  <kettenis@gnu.org>

	* tramp-frame.h (struct tramp_frame): Allow for 16 instructions
	instead of 8.
	* m68kbsd-tdep.c: Include "frame.h", "trad-frame.h" and
	"tramp-frame.h".
	(m68kobsd_sigtramp_cache_init): New function.
	(m68kbsd_aout_init_abi): Prepend m68kobsd_sigtramp unwinder.

2005-08-02  Fred Fish  <fnf@specifix.com>

	* defs.h (parse_frame_specification): Remove prototype.
	* stack.c (parse_frame_specification): Add prototype and
	make function static.
	(frame_info): Move common code outside if..then..else.

2005-08-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* value.c (value_contents_writeable): Use value_contents_raw.

2005-08-01  Daniel Jacobowitz  <dan@codesourcery.com>

	Suggested by Shaun Jackman <sjackman@gmail.com>:
	* defs.h (print_transfer_performance): Update prototype.
	* m32r-rom.c (m32r_load, m32r_upload_command): Use gettimeofday
	for print_transfer_performance.
	* remote-m32r-sdi.c (m32r_load): Likewise.
	* symfile.c (generic_load): Likewise.
	(report_transfer_performance): Create a dummy struct timeval.
	(print_transfer_performance): Use a more accurate measure
	of performance.

2005-08-01  Fred Fish  <fnf@specifix.com>

	* stack.c (parse_frame_specification_1): Remove use of obsolete
	SETUP_ARBITRARY_FRAME macro.

2005-08-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2-frame.c (read_signed_leb128): Handle values that do not
	fit in 32 bits.